--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,4 @@
 <resources>
-    <string name="app_name">Mix Master</string>
-    <string name="welcome_subtitle">Craft cocktails with a community of enthusiasts.</string>
-    <string name="image_description">Cocktail illustrations</string>
     <string name="get_started">Get started</string>
     <string name="email_hint">Email</string>
     <string name="password_hint">Password</string>
@@ -17,20 +14,25 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="register">Register</string>
     <string name="create_account">Create an account</string>
-    <string name="already_account">Already have an account? Log in</string>
-    <string name="cocktail">Cocktail</string>
-    <string name="ingredients">Ingredients</string>
-    <string name="instructions">Instructions</string>
+    <string name="already_account"><u>Already have an account? Log in</u></string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
-    <string name="cocktails">Cocktails</string>
     <string name="search">Search</string>
     <string name="add">Add</string>
     <string name="profile">Profile</string>
     <string name="home">Home</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text_choose_profile_pic">Choose profile picture</string>
+    <string name="username">Username</string>
+    <string name="welcome_back">Welcome Back</string>
+    <string name="email">Email</string>
+    <string name="enter_your_email_address">Enter your email address</string>
+    <string name="password">Password</string>
+    <string name="enter_your_password">Enter your password</string>
+    <string name="enter_your_username">Enter your username</string>
+    <string name="header_logo">Header logo</string>
+    <string name="app_name">Wardrobe Share</string>
 
 </resources>
