--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="enter_your_username">Enter your username</string>
     <string name="header_logo">Header logo</string>
     <string name="app_name">Wardrobe Share</string>
-    <string name="find_something_new_to_wear">Find something to wear</string>
+    <string name="find_something_new_to_wear">Find something &quot;new&quot; to wear</string>
     <string name="fashion_bot">Fashion Bot</string>
     <string name="location">Location:</string>
     <string name="contact">Contact:</string>
