--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,8 @@
     <string name="product_image">product image</string>
     <string name="selected_image">Selected Image</string>
     <string name="take_a_picture">Take a picture</string>
+    <string name="edit_post">edit post</string>
+    <string name="delete_post">delete post</string>
+    <string name="description">Description:</string>
 
 </resources>
